[gd_scene load_steps=4 format=3 uid="uid://codkch2r0aa8n"]

[ext_resource type="Script" path="res://scripts/ui/shop_screen.gd" id="1_ksj6c"]
[ext_resource type="Texture2D" uid="uid://chv7nne64by1n" path="res://assets/Art/Shop background.png" id="2_a2n6t"]
[ext_resource type="Shortcut" uid="uid://66u22astbge4" path="res://resources/quit_shortcut.tres" id="2_gb8sf"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ksj6c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a2n6t")

[node name="Return" type="Button" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 45.0
offset_right = 219.0
offset_bottom = 97.0
shortcut = ExtResource("2_gb8sf")
text = "Return"

[node name="Selection" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -46.0
offset_right = 370.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Weapons" type="Button" parent="Selection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Weapons"

[node name="Passives" type="Button" parent="Selection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Passives"

[node name="Gadgets" type="Button" parent="Selection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Gadgets"

[node name="ItemsContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Items" type="VBoxContainer" parent="ItemsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -113.0
offset_right = 305.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="ItemsContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = 130.0
offset_right = 24.5
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
text = "Done"

[node name="BucklesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 46.88
offset_top = 121.11
offset_right = 123.88
offset_bottom = 144.11
text = "Buckles: 0"
